Edited wiki page Open_EVSEs through web user interface.

--- a/wiki/Open_EVSEs.wiki
+++ b/wiki/Open_EVSEs.wiki
@@ -88,3 +88,9 @@ http://farm9.staticflickr.com/8072/8263351845_e88bc69e86_c.jpg
    * Future Enclosure #3: Tiny sealed unit without a Display.
 http://www.seattleeva.org/images/thumb/1/16/20121220_094550.jpg/800px-20121220_094550.jpg
 http://www.seattleeva.org/images/thumb/0/0e/20121220_092011.jpg/800px-20121220_092011.jpg
+
+= Jacob Scutzlas's L2 Open-EVSE for Chevy Volt =
+   -Using Diversified Stage, Inc Enclosure
+http://i144.photobucket.com/albums/r176/scutzi128/IMG_3313_zps2a4b6a99.jpg
+http://i144.photobucket.com/albums/r176/scutzi128/IMG_3316_zpsc73a76ef.jpg
+http://i144.photobucket.com/albums/r176/scutzi128/IMG_3319_zpseb9d0840.jpg
