--- a/wiki/Open_EVSEs.wiki
+++ b/wiki/Open_EVSEs.wiki
@@ -90,7 +90,7 @@ http://www.seattleeva.org/images/thumb/1/16/20121220_094550.jpg/800px-20121220_0
 http://www.seattleeva.org/images/thumb/0/0e/20121220_092011.jpg/800px-20121220_092011.jpg
 
 = Jacob Scutzlas's L2 Open-EVSE for Chevy Volt =
-   -Using Diversified Stage, Inc Enclosure
+   -Using Diversified Stage, Inc Enclosure and OpenEVSE Plus v2 
 http://i144.photobucket.com/albums/r176/scutzi128/IMG_3313_zps2a4b6a99.jpg
 http://i144.photobucket.com/albums/r176/scutzi128/IMG_3316_zpsc73a76ef.jpg
 http://i144.photobucket.com/albums/r176/scutzi128/IMG_3319_zpseb9d0840.jpg
