--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -128,6 +128,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || juanan INT || Built || LCD Built || Paid || ||
 || || elmore || Built || RTC LCD || Paid || ||
 || || jamy.25 || Built || RTC LCD - EV Sim || Paid ||
+|| || mathieu_schuller INT || Built || LCD Built CT - Relay || Paid || || 
 
 
 
