--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -130,7 +130,9 @@ Payment via paypal to chris1howell83@gmail.com
 || || juanan INT || Built || LCD Built || Paid || ||
 || || elmore || Built || RTC LCD || Paid || ||
 || || jamy.25 || Built || RTC LCD - EV Sim || Paid ||
-|| || mathieu_schuller INT || Built || LCD Built CT - Relay || Paid || || 
+|| || mathieu_schuller INT || Built || LCD Built CT Relay || Paid || ||
+|| || michael911e || Kit || RTC Kit - EV Sim || Paid || ||
+ 
 
 
 
