--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -132,6 +132,8 @@ Payment via paypal to chris1howell83@gmail.com
 || || jamy.25 || Built || RTC LCD - EV Sim || Paid ||
 || || mathieu_schuller INT || Built || LCD Built CT Relay || Paid || ||
 || || michael911e || Kit || RTC Kit - EV Sim || Paid || ||
+|| || jablonski || Kit || LCD Kit || Paid || ||
+
  
 
 
