--- a/wiki/Ordering.wiki
+++ b/wiki/Ordering.wiki
@@ -29,9 +29,11 @@ Prices $USD
 
 *All orders are via paypal.* Send payment to *chris1howell83@gmail.com*
  * Be sure to include a note with payment of what you are ordering.
- * Only PAID orders are processed/shipped
+ * Orders must be paid before they are processed/shipped
 OpenEVSE boards are available is kit form with all small components pre-soldered or built in limited quantities.
 
 January [http://code.google.com/p/open-evse/wiki/January?ts=1356125971&updated=January Link]
 
 February/March/April [http://code.google.com/p/open-evse/wiki/February?ts=1360551823&updated=February Link]
+
+May/June
