--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -15,7 +15,7 @@
     * [75AOpenEVSE 75A EVSE by mwolrich]
     * [EVSE_LORDSn1per EVSE by Phillip Carlson]
     * [EVSE_by_4Dolio 30A portable EVSE by 4Dolio]
-    * [EVSE_by_scutzi128 Jacob Scutzlas L2 EVSE]
+    * [EVSE_by_scutzi128 OpenEVSE 30A]
   * *SAE J1772 Standard*
     * [J1772Basics Basics of J1772] 
     * [J1772CableSources Sources for J1772 cables]
