Edited wiki page EVSE_by_scutzi128 through web user interface.

--- a/wiki/EVSE_by_scutzi128.wiki
+++ b/wiki/EVSE_by_scutzi128.wiki
@@ -1,9 +1,14 @@
-#summary One-sentence summary of this page.
+#summary OpenEVSE using official OpenEVSE Enclosure and OpenEVSE Plus v2.
 
 = Introduction =
-test
+This guide is to show the assembly of my OpenEVSE charger using the official OpenEVSE Enclosure and OpenEVSE Plus v2 board. The board was purchased assembled by Chris with RTC and LCD. I chose OpenEVSE becuase I like projects and also I think it looks better and is cheaper then most alternatives out there.
 
-Add your content here.
+= High Voltage Schematic =
+http://open-evse.googlecode.com/files/EVSEwAdvanced_Power_supply.pdf
+
+
+= Parts List =
+https://docs.google.com/spreadsheet/pub?key=0AopSibggesQ5dGgtVkpsLWdFMUFabnowTTlpZXlLOFE&output=html
 
 
 = Details =
