Edited wiki page J1772CableSources through web user interface.  Added known working coupon codes for leviton

--- a/wiki/J1772CableSources.wiki
+++ b/wiki/J1772CableSources.wiki
@@ -20,3 +20,10 @@
 || || Plug with Cord || Dostar || L1/L2 || 45A || No || 20' || $230 || http://www.tucsonev.com/index.html ||
 || || Plug with Cord || Dostar || L1/L2 || 70A || No || 26' || $250 || http://www.tucsonev.com/index.html ||
 || || J-1772 with 3m cord || EV Power || L1/L2 || 32A ||  || 3m || $145 || http://ev-power.com.au/webstore/index.php/sae-charging-plugs-sockets/ev-charging-plug-sae-j1772.html ||
+
+== Coupon Codes ==
+  *  luvlevtn - 20% off Leviton Store
+  *  thankyou - 10% off Leviton Store
+  *  Leviton free shipping on orders over $100
+
+Check http://www.retailmenot.com for more coupon codes!
