--- a/wiki/Workshop_NOCAL.wiki
+++ b/wiki/Workshop_NOCAL.wiki
@@ -24,8 +24,8 @@ Alameda, CA 94501
 These parts are to be used as a baseline. A sample unit will be built with the configuration below. Feel free to substitute components to fit your needs or arrange group purchases to save on shipping fees.
 
 || Part || Source || Cost || Quantity || Link ||
-|| OpenEVSE Plus Board (Built) || OpenEVSE || $135 ($20 discount) || 1 || http://code.google.com/p/open-evse/wiki/Ordering ||
-|| OpenEVSE LCD (Built) || OpenEVSE || $30 ($10 discount) || 1 || http://code.google.com/p/open-evse/wiki/Ordering ||
+|| OpenEVSE Plus Board (Built) || OpenEVSE || $155 || 1 || http://code.google.com/p/open-evse/wiki/Ordering ||
+|| OpenEVSE LCD (Built) || OpenEVSE || $40 || 1 || http://code.google.com/p/open-evse/wiki/Ordering ||
 || J-1772 cable, 30 amps (A3435-PEV) || Leviton || $134.00 code LUVLEVTN || 1 ||http://store.leviton.com/dp/B00912OT00#.UD18QGjEV68 ||
 || Enclosure || Diversified Stage Inc. || 58.00 || 1 || https://ssl.diversifiedstage.com/estore/ ||
 || 30A Relay || Digikey || $13.03 || 1 ||  http://search.digikey.com/us/en/products/T92P7D22-12/PB486-ND/365921 ||
@@ -37,7 +37,7 @@ These parts are to be used as a baseline. A sample unit will be built with the c
 || 1/4" Stand-off || Digikey || $0.14 || 8 || http://www.digikey.com/product-detail/en/9905-250/492-1104-ND/586424 ||
 || 30A AC Plug L6-30 || Stay Online || $33.00 || 1  || http://www.stayonline.com/detail.aspx?ID=15695 ||
 || Waterproof Button (Green) || Adafruit || $5.36 || 1 || http://www.adafruit.com/products/560 ||
-|| Strain Relief || Polycase || $7.00 || 2 || http://www.polycase.com/cg-17 ||
+|| Strain Relief CG-16|| Polycase || $7.00 || 2 || http://www.polycase.com/cg-16 ||
 || EATON GBK5 Ground Bar Kit || Home Depot || $3.95 || 1 || http://www.homedepot.com/p/t/100133761?catalogId=10053&langId=-1&keyword=GBK5&storeId=10051&N=5yc1v&R=100133761 ||
 || 30A 250V Fuse || Zoro Tools || 3.09 || 2 || http://www.zorotools.com/g/00010027/k-G1141323/ ||
 || FUSEHOLDER 30A AGU || Zoro Tools || $7.21 || 1 || http://www.zorotools.com/g/Midget%20Fuse%20Block/00010592/||
