Edited wiki page Workshop_NOCAL through web user interface.

--- a/wiki/Workshop_NOCAL.wiki
+++ b/wiki/Workshop_NOCAL.wiki
@@ -6,7 +6,18 @@ OpenEVSE Workshop Saturday May 18, 2013.
 
 Estimated Start: 1000AM.
 
-Space Limited to 8 builders. Helpers, guests and visitors welcome.
+Space Limited to 8 builders *(All slots taken)*. Helpers, guests and visitors welcome.
+
+Confirmed Builders:
+T.Wicker
+S.Kumar
+D.Bradley
+W.Bennion
+T.Keenan
+J.Link
+C.Alan
+Ritesh
+
 
 = Location =
 
