Edited wiki page Workshop_NOCAL through web user interface.

--- a/wiki/Workshop_NOCAL.wiki
+++ b/wiki/Workshop_NOCAL.wiki
@@ -9,14 +9,24 @@ Estimated Start: 1000AM.
 Space Limited to 8 builders *(All slots taken)*. Helpers, guests and visitors welcome.
 
 Confirmed Builders:
+
 T.Wicker
+
 S.Kumar
+
 D.Bradley
+
 W.Bennion
+
 T.Keenan
+
 J.Link
+
 C.Alan
+
 Ritesh
+
+M.Dinh
 
 
 = Location =
