--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -106,6 +106,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || Wicker || Built || LCD || Paid || Workshop ||
 || || sonomadb ~2|| Built || RTC Built || Paid || Workshop ||
 || || Chris || Built || RTC - EV Sim || Paid || Workshop || 
+|| || mike.scott || Kit || LCD Kit -2 || Paid || Workshop - Guest ||
 || ||  troypearce  || Kit || LCD KIT || Paid || Shipped 4/11||
 || || beaver || || RTC LCD kit EV Sim || Paid || Shipped 4/16 ||
 || || beebe || Built || RTC LCD Built EV Sim || Paid || Shipped 4/16 ||
