Edited wiki page Workshop_NOCAL through web user interface.

--- a/wiki/Workshop_NOCAL.wiki
+++ b/wiki/Workshop_NOCAL.wiki
@@ -10,33 +10,22 @@ Space Limited to 8 builders *(All slots taken)*. Helpers, guests and visitors we
 
 Confirmed Builders:
 
-T.Wicker
-
-S.Kumar
-
-D.Bradley
-
-W.Bennion
-
-T.Keenan
-
-J.Link
-
-C.Alan
-
-Ritesh
-
+T.Wicker 
+S.Kumar 
+D.Bradley 
+W.Bennion 
+T.Keenan 
+J.Link 
+C.Alan 
+Ritesh 
 M.Dinh
 
 
 = Location =
 
-Rhythmix Cultural Works
-
-2513 Blanding Ave
-
-Alameda, CA 94501
-
+*O'Connell Volvo 
+1537 Webster St
+Alameda, CA 94501* 
 =Parts=
 
 
