--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -27,6 +27,7 @@
     * [AtmelStudio Load Firmware with Atmel Studio]
     * [OpenEVSE_LCD_spec Add a display]
     * [MaxCurrent Set Default Current]
+    * [OpenEVSE_WiFi Add WiFi to OpenEVSE]   
     * [AssemblePlusV2 Build EVSE Plus V2 kit]
     * [AssemblyGuide] 30A OpenEVSE Plus v1/v2
     * [EVSimulator] Assembly and Usage
