Edited wiki page Ordering through web user interface.

--- a/wiki/Ordering.wiki
+++ b/wiki/Ordering.wiki
@@ -36,4 +36,4 @@ January [http://code.google.com/p/open-evse/wiki/January?ts=1356125971&updated=J
 
 February/March/April [http://code.google.com/p/open-evse/wiki/February?ts=1360551823&updated=February Link]
 
-May/June  [http://code.google.com/p/open-evse/wiki/May_June_July]
+May/June  [http://code.google.com/p/open-evse/wiki/May_June_July Link]
