--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -26,3 +26,4 @@ Payment via paypal to chris1howell83@gmail.com
 
 || Slot || Name || OpenEVSE Plus || Extras || Payment Recieved || Shipped ||
 || 1 || bug-ar || Built || RGB LCD Built - Int Ship || Paid ||  ||
+|| 2 || sorphin || Kit || RTC Kit || Paid || ||
