Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -27,3 +27,5 @@ Payment via paypal to chris1howell83@gmail.com
 || Slot || Name || OpenEVSE Plus || Extras || Payment Recieved || Shipped ||
 || 1 || bug-ar || Built || RGB LCD Built - Int Ship || Paid ||  ||
 || 2 || sorphin || Kit || RTC Kit || Paid || ||
+|| 3 || andy || Built || LCD Built || || ||
+|| 4 || mattgreen || Kit || RTC Kit || Paid || ||
