Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -29,3 +29,5 @@ Payment via paypal to chris1howell83@gmail.com
 || 2 || sorphin || Kit || RTC Kit || Paid || ||
 || 3 || andy || Built || LCD Built || || ||
 || 4 || mattgreen || Kit || RTC Kit || Paid || ||
+|| 5 || bpifer || Kit || LCD Kit || Paid || ||
+|| 6 || kris.stew || || || || || 
