--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -123,7 +123,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || noelingle || Kit || LCD kit - EVSIM || Paid || Shipped 4/16 ||
 || || mjrdye - INT || kit || LCD kit || Paid || Shipped 4/16||
 || || w.decker || || RTC Kit - EVsim || Paid || Shipped 4/16 ||
-|| || woodrell || Built || RTC Built || Paid || ||
+|| || woodrell || Built || RTC Built - EVSIM || Paid || ||
 || || cstirba || Kit || LCD Kit || Paid || ||
 || || forest.russman || Built || RTC Built - EV Sim || Paid || ||
 || || phil@asylum || Kit || RTC Kit || Paid || ||
