Edited wiki page February through web user interface.

--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -133,6 +133,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || juanan INT || Built || LCD Built || Paid || ||
 || || elmore || Built || RTC LCD || Paid || ||
 || || jamy.25 || Built || RTC LCD - EV Sim || Paid ||
+|| || jgoyer || Kit || LCD kit || || Paid || ||
 || || mathieu_schuller INT || Built || LCD Built CT Relay || Paid || ||
 || || michael911e || Kit || RTC Kit - EV Sim || Paid || ||
 || || jablonski || Kit || LCD Kit || Paid || ||
