Edited wiki page February through web user interface.

--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -1,6 +1,10 @@
 #summary February Batch.
 
 = Introduction =
+* Update 5/19 * I have a massive shipment going out in the next few days. Those of you on this list should be recieving your parts soon...
+
+* Update 5/19 * NorCal Workshop was a lot of fun. Most of the builders finished and successfully tested during the workshop.
+
 *Update 4/30* There are only about 25 boards left and 25 on this list. A new batch has been ordered so new orders will be on the next batch.
 
 *Update 3/26* 50 boards have been kitted/built so far and I am cranking them out. This week I more than doubled my goal of 10 with 23 built...
