--- a/wiki/EVSE_by_rbeebe.wiki
+++ b/wiki/EVSE_by_rbeebe.wiki
@@ -33,9 +33,16 @@ http://open-evse.googlecode.com/files/EVSEwAdvanced_Power_supply.pdf
 
 The first step was gathering all the materials. A Leviton 30-amp charge cable is on the left. Next to it is a 10-gauge rubber cable from Home Depot that I had left over from a home generator project. Inside that coil are 2 gland nuts, 2 fuse holders and a 30-amp relay. Upper right is a 30-amp twist lock plug and an illuminated button from Adafruit.
 
-http://rick.beebe.org//photo/EVSE/IMG_1890.JPG
+http://rick.beebe.org/photo/EVSE/IMG_1890.JPG
 
+On the left is a ground bus bar sold for home circuit breaker panels. The two circuit boards on the silver envelopes are what you get when you buy an OpenEVSE "kit". The top one is the smarts of the system. Below it is an optional LCD display. To the right are crimp terminals and some "cheaters" for the relay. The grey panel underneath comes with the Diversified Stage box and is where you mount all the components.
 
+http://rick.beebe.org/photo/EVSE/IMG_1895.JPG
 
+A lot of people install their EVSE inside a standard NEMA box. I decided to try out this new ready-built case from Diversified Stage. It's a bit large but it's very heavy duty and all the holes are already cut.
+
+http://rick.beebe.org/photo/EVSE/IMG_1896.JPG
+
+I ordered the box at the same time I ordered all the other parts. After I got it and was examining the backing plate I realized I didn't know what the predrilled holes were for. An email to DS and they sent me the link to a schematic (shown below. I don't know why they don't put this inside the box when you buy it). It specifies specific relay, fuse holder and grounding bar. I lucked out with the relay I bought but my fuse holders and ground bar are different. Fortunately it was easy to adapt the plate to what I bought but you may want to go right for the "correct" ones when you're ordering parts.
 
 http://client.diversifiedstage.com/file/evse_indoor_assembly_drawing.pdf
