--- a/wiki/EVSE_by_rbeebe.wiki
+++ b/wiki/EVSE_by_rbeebe.wiki
@@ -29,7 +29,7 @@ http://open-evse.googlecode.com/files/EVSEwAdvanced_Power_supply.pdf
 || Total || || $531.18 ||
 
 
-= Build =
+= Collect the parts =
 
 The first step was gathering all the materials. A Leviton 30-amp charge cable is on the left. Next to it is a 10-gauge rubber cable from Home Depot that I had left over from a home generator project. Inside that coil are 2 gland nuts, 2 fuse holders and a 30-amp relay. Upper right is a 30-amp twist lock plug and an illuminated button from Adafruit.
 
@@ -43,6 +43,18 @@ A lot of people install their EVSE inside a standard NEMA box. I decided to try 
 
 http://rick.beebe.org/photo/EVSE/IMG_1896.JPG
 
-I ordered the box at the same time I ordered all the other parts. After I got it and was examining the backing plate I realized I didn't know what the predrilled holes were for. An email to DS and they sent me the link to a schematic (shown below. I don't know why they don't put this inside the box when you buy it). It specifies specific relay, fuse holder and grounding bar. I lucked out with the relay I bought but my fuse holders and ground bar are different. Fortunately it was easy to adapt the plate to what I bought but you may want to go right for the "correct" ones when you're ordering parts.
+I ordered the box at the same time I ordered all the other parts. After I got it and was examining the backing plate I realized I didn't know what the predrilled holes were for. An email to DS and they sent me the link to a schematic: http://client.diversifiedstage.com/file/evse_indoor_assembly_drawing.pdf (I don't know why they don't put this inside the box when you buy it). It specifies specific relay, fuse holder and grounding bar. I lucked out with the relay I bought, but my fuse holders and ground bar are different. Fortunately it was easy to adapt the plate to what I bought but you may want to go right for the "correct" ones when you're ordering parts.
 
-http://client.diversifiedstage.com/file/evse_indoor_assembly_drawing.pdf
+= Assembly =
+
+Here are the parts mounted on the backing plate. DS included screws and washers for mounting the EVSE and the LCD display but I had to scrounge the rest. You'll need washers for the bolts holding the relay in place.
+
+http://rick.beebe.org/photo/EVSE/IMG_1897.JPG
+
+The OpenEVSE board mounted on its standoffs. There are fiber washers under the screw heads. The lower right one hit the headers so I had to sand a couple flats on it.
+
+http://rick.beebe.org/photo/EVSE/IMG_1900.JPG
+
+The LCD display and illuminated button mounted. This pic shows off my lousy soldering. I should have put heat shrink on there too. I did protect this before final assembly. I had to enlarge the hole slightly for this particular button. I got the Real-Time Clock (RTC) option so there's a battery that will go in that silver clip to keep the clock running.
+
+http://rick.beebe.org/photo/EVSE/IMG_1902.JPG
